# organizational-intelligence-plugin

./: .gitignore  .pmat-gates.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  ORG_CONTEXT.md  ORG_IMAGE.md  ORG_INTELLIGENCE_IMAGE.md  QUICKSTART.md  README.md  aprender-training.json  demo.sh  paiml-analysis-insights.md  paiml-complete-analysis.yaml  paiml-complete-insights.md  paiml-defect-analysis.yaml  pmat-quality.toml  realizar-training.json  training-data.json  trueno-training.json
.github/workflows/: ci.yml  nightly.yml  pr.yml  release.yml
.pmat/: baseline.json  project.toml
.pmat-metrics/: commit-009a80d-meta.json  commit-0239741-meta.json  commit-1ea0eed-meta.json  commit-611edee-meta.json  commit-693780f-meta.json  commit-792d86e-meta.json  commit-90af1a6-meta.json  commit-a25518e-meta.json  commit-a9b5621-meta.json  commit-e9c1478-meta.json
.pmat/metrics/: dependencies.json
benches/: gpu_benchmarks.rs  nlp_benchmarks.rs
book/: README.md  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: class-imbalance.md  model-serialization.md  smote.md
book/src/appendix/: changelog.md
book/src/architecture/: confidence-routing.md  tier1-rule-based.md  tier2-tfidf-rf.md  tier3-codebert.md
book/src/best-practices/: training-data-collection.md
book/src/cli/: analyze.md  extract-training-data.md  import-depyler.md  localize.md  review-pr.md  summarize.md  train-classifier.md
book/src/core-concepts/: defect-pattern-analysis.md  defect-taxonomy.md  organizational-intelligence.md  three-tier-classification.md
book/src/defect-categories/: api-misuse.md  ast-transform.md  comprehension-bugs.md  concurrency-bugs.md  configuration-errors.md  integration-failures.md  iterator-chain.md  ownership-borrow.md  stdlib-mapping.md  testing-gaps.md  type-annotation-gaps.md  type-errors.md
book/src/examples/: analyze-organization.md  citl-import.md  classify-defects.md  depyler-validation.md  explore-data.md  fault-localization.md  full-analysis.md  train-custom-model.md
book/src/extreme-tdd/: test-first-philosophy.md  zero-tolerance.md
book/src/getting-started/: first-analysis.md  installation.md  quick-start.md
book/src/gpu/: correlation-matrix.md  gpu-vs-cpu.md  sliding-window.md
book/src/ml-pipeline/: exploratory-data-analysis.md  hybrid-classification.md  tfidf-features.md  training-data-extraction.md
book/src/nlp/: commit-message-processing.md  ngram-extraction.md  stop-word-filtering.md  tokenization-stemming.md
book/src/sprints/: retrospectives.md  sprint-planning.md  sprint-v030.md  sprint-v040.md  sprint-v050.md
book/src/toyota-way/: genchi-genbutsu.md  jidoka.md  pdca-cycle.md
book/src/troubleshooting/: low-accuracy.md  model-loading-errors.md  slow-inference.md
book/src/validation/: accuracy-analysis.md  nlp-011-depyler.md  nlp-014-citl.md  overfitting-analysis.md
contracts/.pv/cache/lint/: 20587ec6af833fcd.json  261d9b13a4e6ce96.json  82aa4a940ebea46c.json  f083cd584cdce9d0.json
docs/: GPU_QUICKSTART.md  PERFORMANCE_VALIDATION.md  PMAT_COMPLEXITY_ANALYSIS.md  SPRINT_v0.2.0_COMPLETE.md  USER_GUIDE.md  how-to-integrate-as-plugin-with-pmat-improve-prompts-spec.md
docs/enhancements/: quality-signals-integration.md
docs/execution/: roadmap.md
docs/specifications/: GPU-correlation-predictions-spec.md  cicd-001-spec.md  cicd-002-spec.md  nlp-014-citl-integration-spec.md  opt-001-spec.md  organization-intelligence-spec.md  tarantula-defect-specification.md  trueno-viz-integration.md
docs/validation/: NLP-011-depyler-validation-report.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/tests/: 01-basic-loading.spec.ts  02-defect-classification.spec.ts  03-semantic-clustering.spec.ts
examples/: analyze_org.rs  citl_import.rs  classify_defects.rs  explore_data.rs  fault_localization.rs  full_analysis.rs
scripts/: pre-commit
src/: analyzer.rs  citl.rs  classifier.rs  cli.rs  cli_handlers.rs  config.rs  correlation.rs  ensemble_predictor.rs  error.rs  export.rs  features.rs  git.rs  github.rs  gpu_correlation.rs  gpu_main.rs  gpu_store.rs  imbalance.rs  lib.rs  main.rs  ml.rs  ml_trainer.rs  nlp.rs  observability.rs  perf.rs  pmat.rs  pr_reviewer.rs  query.rs  rag_localization.rs  report.rs  sliding_window.rs  storage.rs  summarizer.rs  tarantula.rs  training.rs  viz.rs  wasm.rs
src/cli_handlers/: mod.rs  tests.rs
tests/: cli_integration.rs  cli_tests.rs  ml_trainer_coverage.rs  proptest_validation.rs  validation_test.rs
tests/unit/: classifier_test.rs  cli_test.rs  github_miner_test.rs  report_test.rs
wasm-pkg/: Cargo.toml  index.html
wasm-pkg/src/: lib.rs
