[package]
name = "organizational-intelligence-plugin"
version = "0.1.0"
edition = "2021"
authors = ["OIP Team"]
license = "MIT"
description = "Organizational Intelligence Plugin - Defect pattern analysis for GitHub organizations"
repository = "https://github.com/paiml/organizational-intelligence-plugin"

[[bin]]
name = "oip"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GitHub API integration
octocrab = "0.39"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git integration
git2 = "0.19"

# Temporary directories
tempfile = "3.10"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
