[package]
name = "organizational-intelligence-plugin"
version = "0.1.0"
edition = "2021"
authors = ["OIP Team"]
license = "MIT"
description = "Organizational Intelligence Plugin - Defect pattern analysis for GitHub organizations"
repository = "https://github.com/paiml/organizational-intelligence-plugin"

[[bin]]
name = "oip"
path = "src/main.rs"

[[bin]]
name = "oip-gpu"
path = "src/gpu_main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GitHub API integration
octocrab = "0.39"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git integration
git2 = "0.20"

# Temporary directories
tempfile = "3.10"

# GPU acceleration stack
trueno = "0.7.1"
trueno-db = "0.3.2"
trueno-graph = "0.1.1"
aprender = "0.1"

# GPU compute (wgpu for cross-platform GPU)
wgpu = { version = "0.19", features = ["wgsl"] }

# Additional for GPU features
bytemuck = "1.14"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gpu_benchmarks"
harness = false

[features]
default = []
gpu = ["wgpu/default"]  # Enable GPU compute (requires GPU hardware)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
