[package]
name = "organizational-intelligence-plugin"
version = "0.3.4"
edition = "2021"
rust-version = "1.75.0"
authors = ["OIP Team"]
license = "MIT"
description = "Organizational Intelligence Plugin - Defect pattern analysis for GitHub organizations"
repository = "https://github.com/paiml/organizational-intelligence-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oip"
path = "src/main.rs"

[[bin]]
name = "oip-gpu"
path = "src/gpu_main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GitHub API integration
octocrab = "0.39"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
num_cpus = "1.16"

# Git integration
git2 = "0.20"

# Temporary directories
tempfile = "3.10"

# GPU acceleration stack
trueno = "0.15"
trueno-db = "0.3.13"
trueno-graph = "0.1.13"
trueno-rag = "0.2"
aprender = "0.26"

# Data loading (alimentar - paiml stack)
alimentar = { version = "0.2.5", default-features = false, features = ["local", "mmap", "shuffle"] }
arrow = "57"  # Match alimentar's arrow version
parquet = "57"  # For Parquet file I/O

# Visualization (optional)
trueno-viz = { version = "0.1", optional = true }

# GPU compute (wgpu for cross-platform GPU)
wgpu = { version = "0.19", features = ["wgsl"] }

# Additional for GPU features
bytemuck = "1.14"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
serial_test = "3.0"
proptest = "1.4"

[[bench]]
name = "gpu_benchmarks"
harness = false

[[bench]]
name = "nlp_benchmarks"
harness = false

[[example]]
name = "classify_defects"
path = "examples/classify_defects.rs"

[[example]]
name = "analyze_org"
path = "examples/analyze_org.rs"

[[example]]
name = "full_analysis"
path = "examples/full_analysis.rs"

[[example]]
name = "citl_import"
path = "examples/citl_import.rs"

[[example]]
name = "explore_data"
path = "examples/explore_data.rs"

[[example]]
name = "fault_localization"
path = "examples/fault_localization.rs"

[features]
default = []
gpu = ["wgpu/default"]  # Enable GPU compute (requires GPU hardware)
viz = ["trueno-viz"]    # Enable visualization output
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:getrandom", "dep:console_error_panic_hook"]  # WebAssembly support

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
