[package]
name = "oip-wasm"
version = "0.1.0"
edition = "2021"
description = "Organizational Intelligence Plugin - WebAssembly bindings for browser-based defect analysis"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NLP and ML from aprender (WASM-compatible via trueno)
aprender = { version = "0.9.1", default-features = false }

# Required for WASM random number generation
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
